--- a/src/index.css
+++ b/src/index.css
@@ -251,10 +251,13 @@ Story
 .title {
   line-height: 1.5;
   margin-bottom: 0.25rem;
+  text-align: center;
+  font-size: 1.5rem;
 }
 .info {
   margin-bottom: 0.5rem;
   color: var(--clr-grey-5);
+  font-size: 1rem;
 }
 
 .read-link {
@@ -271,4 +274,14 @@ Story
   cursor: pointer;
   text-transform: capitalize;
   font-size: 0.85rem;
+}
+
+.story1 {
+  background: var(--clr-white);
+  border-radius: var(--radius);
+  padding: 1rem 0rem;
+  width: 1083px;
+  border: 3px solid black;
+  margin: 17px 0px;
+  background-color: aliceblue;
 }
